Image optimization to avoid flickering in mobile view

--- a/src/Components/Career/Career.scss
+++ b/src/Components/Career/Career.scss
@@ -74,6 +74,7 @@ $desktop: 64rem;
   }
 
   &__image-wrapper {
+    aspect-ratio: 1/1;
     max-width: 25rem;
     margin: 0 auto;
 
